# sh-3ds

./: .clang-format  .clang-tidy  .cmake-format  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: claude-code-review.yml  pre-commit.yml
cmake/: CompilerWarnings.cmake  Dependencies.cmake  Sanitizers.cmake
config/: hardware.yaml
config/detection/: xy_fennekin.yaml  xy_froakie.yaml
config/detection_params/: xy_starter_sr.yaml
config/games/: pokemon_xy.yaml
config/hunts/: xy_starter_sr.yaml  xy_starter_sr_fennekin.yaml
docs/: development_plan.md
memory/: cxxstatetree-fsm.md
notebooks/: 3ds_screen_detection.ipynb
src/: CMakeLists.txt  Main.cpp
src/App/: CMakeLists.txt  DebugLayer.cpp  DebugLayer.h  PlaybackController.cpp  PlaybackController.h  SH3DSDebugApp.cpp  SH3DSDebugApp.h  TextureUploader.cpp  TextureUploader.h
src/Capture/: CMakeLists.txt  FileFrameSource.cpp  FileFrameSource.h  FramePreprocessor.cpp  FramePreprocessor.h  FrameSeeker.h  FrameSource.h  MjpegFrameSource.cpp  MjpegFrameSource.h  ScreenDetector.cpp  ScreenDetector.h  VideoFrameSource.cpp  VideoFrameSource.h
src/Core/: CMakeLists.txt  Config.cpp  Config.h  Constants.h  Logging.cpp  Logging.h  Types.h
src/FSM/: CMakeLists.txt  CXXStateTreeFSM.cpp  CXXStateTreeFSM.h  ConfigDrivenFSM.cpp  ConfigDrivenFSM.h  GameStateFSM.h  HuntProfiles.cpp  HuntProfiles.h
src/Input/: CMakeLists.txt  InputAdapter.h  InputCommand.h  InputEncoding.h  MockInputAdapter.cpp  MockInputAdapter.h
src/Pipeline/: CMakeLists.txt  Orchestrator.cpp  Orchestrator.h
src/Sh3DSApp/: CMakeLists.txt  Sh3DSAppGUI.cpp
src/Strategy/: CMakeLists.txt  HuntStrategy.h  SoftResetStrategy.cpp  SoftResetStrategy.h
src/Vision/: CMakeLists.txt  ColorImprovement.cpp  ColorImprovement.h  DominantColorDetector.cpp  DominantColorDetector.h  HistogramDetector.cpp  HistogramDetector.h  HistogramUtils.cpp  HistogramUtils.h  IntensityEventDetector.cpp  IntensityEventDetector.h  ShinyDetector.h  TemplateMatcher.cpp  TemplateMatcher.h
tests/: CMakeLists.txt
tests/integration/: TestMjpegPipeline.cpp  TestReplayPipeline.cpp  TestXYStarterFennekinReplay.cpp
tests/unit/: TestConfig.cpp  TestConfigBottomScreen.cpp  TestFileFrameSourceSeek.cpp  TestFrameCorrector.cpp  TestFramePreprocessor.cpp  TestFramePreprocessorDualScreen.cpp  TestFsmTransitions.cpp  TestHuntProfiles.cpp  TestInputEncoding.cpp  TestIntensityEventDetector.cpp  TestMjpegFrameSource.cpp  TestOrchestrator.cpp  TestScreenDetector.cpp  TestShinyDetector.cpp  TestSoftResetStrategy.cpp  TestTypes.cpp  TestVideoFrameSource.cpp
tools/: analyze_frames.py
